fix: Ensure netty's buffer allocator is used post J17 upgrade
Motivation

ModelMesh is configured to use Netty's own management of direct byte buffers for efficiency. In java versions >= 16 this requires explicitly opening access to the relevant internal JDK module.

Unfortunately this was missed in the recent upgrade to Java17, meaning the JDK's own direct buffer allocation was being used. Since this would otherwise have negligible usage it is configured to just 32MB - so a side effect is the container crashing with OOM errors.

Modifications

Add --add-opens=java.base/java.nio=ALL-UNNAMED which is now needed for -Dio.netty.tryReflectionSetAccessible=true to work.

Result

Netty's own DirectBytBuffer management is used as intended, avoiding OOM.

Signed-off-by: Nick Hill <nickhill@us.ibm.com>